meta+title+style+footer

--- a/fop.html
+++ b/fop.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="ФОП и ИНН открытие ФОПа, получение ИНН">
+    <meta name="keywords" content="ФОП, фоп, ИНН, 3 группа">
+    <!-- Запрет индексации страницы полностью -->
+    <meta name="robots" content="none">
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>FOP</title>
+    <title>ФОП</title>
 </head>
 
 <body>
@@ -49,9 +55,12 @@
     </header>
     <section class="container entry__section">
         <h2>ФОП и ИНН</h2>
-        <h3>Головне управління ДПС у Львівській області <a href="https://lv.tax.gov.ua/dfs-u-regioni/golov-upr/kontakti-/" class="link" target="blank"><i class="fas fa-link"></i>lv.tax.gov.ua</a></h3>
+        <h3>Головне управління ДПС у Львівській області <a
+                href="https://lv.tax.gov.ua/dfs-u-regioni/golov-upr/kontakti-/" class="link" target="blank"><i
+                    class="fas fa-link"></i>lv.tax.gov.ua</a></h3>
         <h3>Инструкция от пользователя <span>@drpzk</span>
-            <a href="https://www.immigration2ukraine.org/fop.html" class="link" target="blank"><i class="fas fa-link"></i>immigration2ukraine.org</a></h3>
+            <a href="https://www.immigration2ukraine.org/fop.html" class="link" target="blank"><i
+                    class="fas fa-link"></i>immigration2ukraine.org</a></h3>
 
         <h3>Пошаговая инструкция открытия ФОП от участника группы <span>@bellviv:</span></h3>
         <ol>
@@ -62,15 +71,18 @@
             <li>Рэгістрацыя ФОП у Падатковай.</li>
         </ol>
         <h3>Дополнение от пользователя <span>@Verym_Mozham_Peramozham</span>:</h3>
-        <p class="text">- идёте в налоговую и получаете ИНН - потребуется заверенный перевод паспорта и его копия, копию заберут - затем с ИНН и
-            его копией идёте в другой кабинет налоговой и получаете ЭЦП - тут заберут оригинал перевода. С этим ЭЦП заходите на сайт
+        <p class="text">- идёте в налоговую и получаете ИНН - потребуется заверенный перевод паспорта и его копия, копию
+            заберут - затем с ИНН и
+            его копией идёте в другой кабинет налоговой и получаете ЭЦП - тут заберут оригинал перевода. С этим ЭЦП
+            заходите на сайт
             Дии, заполняете там паспортные данные и заявляетесь на ФОП. Его открывают за сутки</p>
         <h3>ФОП 3 группы, инструкция от <span>@Verym_Mozham_Peramozham</span></h3>
         <h5>Итак, рабочий алгоритм, проверено на себе:</h5>
         <ol>
-            <li>идёте в налоговую и получаете ИНН: потребуется заверенный перевод паспорта и его копия, копию заберут</li>
+            <li>идёте в налоговую и получаете ИНН: потребуется заверенный перевод паспорта и его копия, копию заберут
+            </li>
             <li>затем с ИНН и его копией идёте в другой кабинет налоговой и получаете ЭЦП</li>
-            <li>тут заберут оригинал перевода. С этим ЭЦП заходите на сайт Дии, 
+            <li>тут заберут оригинал перевода. С этим ЭЦП заходите на сайт Дии,
                 заполняете там паспортные данные и заявляетесь на ФОП.<br>
                 Его открывают за сутки</li>
         </ol>
@@ -79,7 +91,8 @@
         <ol>
             <li>Паспорт</li>
             <li>Нотариально-заверенный перевод паспорта.</li>
-            <li>Ксерокопия нотариально-заверенного перевода паспорта. [страницы: первая, последняя, въезд, регистрация + весь перевод] (забирают)</li>
+            <li>Ксерокопия нотариально-заверенного перевода паспорта. [страницы: первая, последняя, въезд, регистрация +
+                весь перевод] (забирают)</li>
             <li>В заявлении на ИНН отчество лучше не указывать, тк ввнж и пвнж делаются потом без отчества</li>
             <li>Регистрацию можно писать беларускую</li>
             <li>Беларуский УНП можно не указывать</li>
@@ -93,23 +106,34 @@
             <li>текущий или карточный личный счет для собственных нужд физического лица (2620).</li>
         </ol>
         <h3>Постановление НБУ № 89 от 11.09.2017 г.[1]</h3>
-        <p class="text">ФЛП, открывая текущий счет в банке, имеет право открыть <span>также карточный счет</span> для собственных нужд физического лица.
+        <p class="text">ФЛП, открывая текущий счет в банке, имеет право открыть <span>также карточный счет</span> для
+            собственных нужд физического лица.
             К текущим счетам банки выпускают платежные карточки, которые фактически работают как «ключ к счету».
             ЗУ «О платежных системах и переводе средств в Украине».[2]</p>
-        <p class="text">Если ФЛП перечисляет с текущего счета (2600) НЕ на свою личную карточку, а, например, члену семьи: родителям, мужу или
-            жене, детям (пп. 14.1.263 ст. 14 НКУ[3]) или другим физическим лицам, то такое перечисление <span>облагается налогом</span> как
-            дополнительное благо НДФЛ-18% и военным сбором 1,5% (п. 174.6 ст.174 НКУ[4]). Кроме того, учитывая п. 176.2 ст. 176 НКУ,
+        <p class="text">Если ФЛП перечисляет с текущего счета (2600) НЕ на свою личную карточку, а, например, члену
+            семьи: родителям, мужу или
+            жене, детям (пп. 14.1.263 ст. 14 НКУ[3]) или другим физическим лицам, то такое перечисление <span>облагается
+                налогом</span> как
+            дополнительное благо НДФЛ-18% и военным сбором 1,5% (п. 174.6 ст.174 НКУ[4]). Кроме того, учитывая п. 176.2
+            ст. 176 НКУ,
             ФЛП становится налоговым агентом по отношению к таким физлицам.
-            Если ФЛП перечисляет предпринимательский доход <span>на свой карточный счет</span> (2620), а уже потом перечисляет деньги таким
+            Если ФЛП перечисляет предпринимательский доход <span>на свой карточный счет</span> (2620), а уже потом
+            перечисляет деньги таким
             родственникам, то налогообложение составляет 0% (п. 174.6 ст. 174 НКУ[5]).</p>
-        <p class="text">При этом, необходимо учитывать, что перевод денег с карточного счета физического лица на карточный счет физического лица
-            (не из числа членов семьи) <span>без указания конкретного вида дохода</span> может быть расценено налоговым органом у получателя
+        <p class="text">При этом, необходимо учитывать, что перевод денег с карточного счета физического лица на
+            карточный счет физического лица
+            (не из числа членов семьи) <span>без указания конкретного вида дохода</span> может быть расценено налоговым
+            органом у получателя
             физлица как получение прочего дохода (п. 164.2.20 НКУ[6]) и обложено НДФЛ-18% и военным сбором 1,5%.
-            Если речь идет о регулярных платежах, например, «вернул долг за обед друга 10 раз за месяц», то такие переводы могут
-            быть расценены как ведение предпринимательской деятельности, без соответствующей регистрации для получателя средств.
-            Если говорить о <span>единоразовых переводах на физ лиц</span>, то рекомендуется указывать назначение платежа («бронь домика»,
+            Если речь идет о регулярных платежах, например, «вернул долг за обед друга 10 раз за месяц», то такие
+            переводы могут
+            быть расценены как ведение предпринимательской деятельности, без соответствующей регистрации для получателя
+            средств.
+            Если говорить о <span>единоразовых переводах на физ лиц</span>, то рекомендуется указывать назначение
+            платежа («бронь домика»,
             «оплата товара»), при этом избегать регулярных переводов и больших сумм.</p>
-        <p class="text">Пополнять свой карточный счет наличными в терминалах можно при условии, что в случае возникновения вопросов у налогового
+        <p class="text">Пополнять свой карточный счет наличными в терминалах можно при условии, что в случае
+            возникновения вопросов у налогового
             органа о происхождении дохода, вы сможете <span>доказать</span> такой доход.</p>
     </section>
 </body>
