--- a/money.html
+++ b/money.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Где открыть счет в банке, как перевести деньги, снятия наличных">
+    <meta name="keywords" content="Банк, счет, карточка, банкомат, Альфа, перевод, Райффайзен, SWIFT">
+    <!-- Запрет индексации страницы полностью -->
+    <meta name="robots" content="none">
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Money</title>
+    <title>Банки, карточки, снятие наличных</title>
 </head>
 
 <body>
@@ -50,35 +56,43 @@
     <section class="container entry__section">
         <h2>Открытие счета в украинском банке (выпуск карты)</h2>
         <h4>По опыту участников чата можно выпустить карту в а-банке, Приватбанке, Райффайзен Банке и ПУМБ.</h4>
-        <p class="text"><span>Ограничение</span> - резиденты Украины не смогут сделать перевод со своей карты на карту нерезидента,
+        <p class="text"><span>Ограничение</span> - резиденты Украины не смогут сделать перевод со своей карты на карту
+            нерезидента,
             интернет банкинг обычно недоступен без ИНН.</p>
-        <p class="text">Нерезиденты могут оформить бесплатные карты в Альфа-Банке Украина – нужен только паспорт 
-            <a href="https://alfabank.ua/ru/about/press/nerezidenti-mozhut-oformiti-bezkoshtovni-karti-v-alfa-banku-2290" class="link" target="blank"><i class="fas fa-link"></i>alfabank.ua</a></p>
+        <p class="text">Нерезиденты могут оформить бесплатные карты в Альфа-Банке Украина – нужен только паспорт
+            <a href="https://alfabank.ua/ru/about/press/nerezidenti-mozhut-oformiti-bezkoshtovni-karti-v-alfa-banku-2290"
+                class="link" target="blank"><i class="fas fa-link"></i>alfabank.ua</a></p>
         <h3>Открытие счета в украинском банке (выпуск карты) по бел. паспорту, инструкция <span>от @Yuri</span></h3>
         <h4>Открытие валютной карты в <span>Райффайзен банке</span>.</h4>
         <h5>Спачатку сказалі, што не можна. Калі сказаў што у тэхнічнай падтрымкі адказалі што можна адчынілі.
             Патрэбна:</h5>
-            <ol>
-                <li>Пашпарт</li>
-                <li>Часовы від на жыхарства (Посвідка на тимчасове проживання). Можна і без часовага віда на жыхарства</li>
-                <li>Ідэнтыфікатар плацельшчыка падаткаў</li>
-            </ol>
-        <h4>У <span>Прываце</span> і <span>Укрсібе</span> рабiлi без ідэнтыфікатара плацельшчыка падаткаў (у Прываце з посвідкай але без іпн, ва Укрсібе
+        <ol>
+            <li>Пашпарт</li>
+            <li>Часовы від на жыхарства (Посвідка на тимчасове проживання). Можна і без часовага віда на жыхарства</li>
+            <li>Ідэнтыфікатар плацельшчыка падаткаў</li>
+        </ol>
+        <h4>У <span>Прываце</span> і <span>Укрсібе</span> рабiлi без ідэнтыфікатара плацельшчыка падаткаў (у Прываце з
+            посвідкай але без іпн, ва Укрсібе
             ўвогуле па пашпарту рб).</h4>
         </ul>
         <h2>Снятие наличных в банкоматах Львова</h2>
         <h3>Информация от пользователя <span>@Aleksey</span></h3>
-        <p class="text">Если у вас есть премиальное обслуживание, например от приора или альфабанка, можно снимать деньги без комиссии с обеих сторон.</p>
+        <p class="text">Если у вас есть премиальное обслуживание, например от приора или альфабанка, можно снимать
+            деньги без комиссии с обеих сторон.</p>
         <h4>Не берет комиссию Агриколе и Идеябанк.</h4>
         <p class="text">Со стороны банков РБ комиссия от 2% у БСБ для карты в byn, остальные выше.</p>
-        <p class="text">Минимальная сумма комиссии со стороны банка в рб, что то в районе 5-7byn, то есть снимать наличку по чуть чуть не стоит, минимум 300+ byn с рублевой карты.
-            Предположим, если <span>снять 1000</span> гривен, комиссия будет не 2%, а <span>5%</span>, так как банк РБ возьмет минимальную сумму комиссии в <span>5byn</span>.</p>
-        <h4>В райфайзен банкоматах фикс комиссия 50 грн (лимит вроде 30 банкнот) и курс более-менее нормальный, <span>от пользователя @Az</span></h4>
+        <p class="text">Минимальная сумма комиссии со стороны банка в рб, что то в районе 5-7byn, то есть снимать
+            наличку по чуть чуть не стоит, минимум 300+ byn с рублевой карты.
+            Предположим, если <span>снять 1000</span> гривен, комиссия будет не 2%, а <span>5%</span>, так как банк РБ
+            возьмет минимальную сумму комиссии в <span>5byn</span>.</p>
+        <h4>В райфайзен банкоматах фикс комиссия 50 грн (лимит вроде 30 банкнот) и курс более-менее нормальный, <span>от
+                пользователя @Az</span></h4>
         <h2></h2>
         <h3>Информация про Альфу и перевод денег от пользователя <span>@Drpzk</span></h3>
         <ol>
             <li>
-                <a href="https://old.alfabank.ua/about/press/nerezidenti-mozhut-oformiti-bezkoshtovni-karti-v-alfa-banku-2290" class="link" target="blank">
+                <a href="https://old.alfabank.ua/about/press/nerezidenti-mozhut-oformiti-bezkoshtovni-karti-v-alfa-banku-2290"
+                    class="link" target="blank">
                     <i class="fas fa-link"></i>Нерезиденти можуть оформити безкоштовні карти</a>
             </li>
             <li>
@@ -99,7 +113,8 @@
         </ul>
         <h4>bel:</h4>
         <ul>
-            <li>Свифт перевод из доллара в доллары, стоит максимум 30р независимо от суммы, в месяц можно переводить до $22k</li>
+            <li>Свифт перевод из доллара в доллары, стоит максимум 30р независимо от суммы, в месяц можно переводить до
+                $22k</li>
             <li>Smart Black: SWIFT - 15р</li>
             <li>Smart Black Family: 3 бесплатных SWIFT перевода в год - дальше 7р</li>
         </ul>
