--- a/visas.html
+++ b/visas.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Как получить польскую визу во Львове, как получить гуманитарную визу, визу PBH">
+    <meta name="keywords" content="Виза, польская, гуманитарная виза, виза для айти, виза PBH">
+    <!-- Запрет индексации страницы полностью -->
+    <meta name="robots" content="none">
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Visas</title>
+    <title>Виза в Польшу</title>
 </head>
 
 <body>
@@ -50,17 +56,21 @@
     <section class="container entry__section">
         <h2>Гуманитарная виза</h2>
         <p class="text">Страховку можно купить за 900 грн возле польского консульства.</p>
-        <p class="text">Тут <a href="https://t.me/belaruscentrlviv/163" class="link"><i class="fab fa-telegram"></i>t.me/belaruscentrlviv</a> пошагово расписано как подаваться в польское консульство <span>в Львове</span>.
+        <p class="text">Тут <a href="https://t.me/belaruscentrlviv/163" class="link"><i
+                    class="fab fa-telegram"></i>t.me/belaruscentrlviv</a> пошагово расписано как подаваться в польское
+            консульство <span>в Львове</span>.
             Для тех кто в Киеве или других городах самостоятельно найдите адрес посольства.</p>
 
         <h2>Виза Polish Business Harbour</h2>
         <h3>Чат Польши:</h3>
-        <p class="text">Для тех, кто переезжает в Польшу по программе Poland.Business Harbour <span>из Беларуси</span> <a href="https://t.me/PBH_BY2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
-            https://t.me/PBH_BY2PLN</a>.
+        <p class="text">Для тех, кто переезжает в Польшу по программе Poland.Business Harbour <span>из Беларуси</span>
+            <a href="https://t.me/PBH_BY2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
+                https://t.me/PBH_BY2PLN</a>.
         </p>
         <h3>Чат Украины:</h3>
-        <p class="text">Для тих, хто переїздить до Польщі за програмою Poland.Business Harbour <span>з України</span> <a href="https://t.me/PBH_UA2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
-            https://t.me/PBH_UA2PLN</a>.
+        <p class="text">Для тих, хто переїздить до Польщі за програмою Poland.Business Harbour <span>з України</span> <a
+                href="https://t.me/PBH_UA2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
+                https://t.me/PBH_UA2PLN</a>.
         </p>
     </section>
 </body>
