--- a/entry.html
+++ b/entry.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Въезд в Украину, правила въезда и основания">
+    <meta name="keywords" content="Основания, тест, Вдома, сертификат">
+    <!-- Запрет индексации страницы полностью -->
+    <meta name="robots" content="none">
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Entry</title>
+    <title>Правила въезда в Украину</title>
 </head>
 
 <body>
@@ -51,33 +57,128 @@
         <h2>Въезд в Украину</h2>
         <h4>Ознакомиться с актуальной информацией можно на сайте Минздрава Украины:</h4>
         <div class="links">
-            <a href="https://moz.gov.ua/" class="link" target="blank"><i class="fas fa-link"></i> https://moz.gov.ua/</a>
+            <a href="https://moz.gov.ua/" class="link" target="blank"><i class="fas fa-link"></i>
+                https://moz.gov.ua/</a>
         </div>
-        <h4>Основная Информация для въезда в Украину:</h4>
+        <h4>Основная Информация про въезд в Украину и пересечение границ:</h4>
         <div class="links">
-            <a href="https://visitukraine.today/ru" class="link" target="blank"><i class="fas fa-link"></i>visitukraine.today</a>
-            <a href="https://t.me/bel_ukr" class="link" target="blank"><i class="fab fa-telegram"></i>BY_UA въезд-выезд, машины, отдых</a>
+            <a href="https://visitukraine.today/ru" class="link" target="blank"><i
+                    class="fas fa-link"></i>visitukraine.today</a>
         </div>
-        
+        <div class="links">
+            <a href="https://t.me/bel_ukr" class="link" target="blank"><i class="fab fa-telegram"></i>BY_UA въезд-выезд,
+                машины, отдых</a>
         </div>
-        <h3>Выезд из Беларуси через наземные пункты пропуска с временным ВНЖ:</h3>
-        <p class="text">Временный вид на жительство в Украине <span>не является</span> причиной для выезда из Беларуси (только постоянный ВНЖ).</p>
-        <div class="links"><a href="https://drive.google.com/file/d/10m6Y4G6fI2WBo6Li9ipO729MdopkZetX/view?usp=sharing" class="link" target="blank"><i class="fas fa-link"></i> Официальный ответ ГПК</a></div>
-        <h3>Основание "Лечение":</h3>
-        <h4>Для белорусских пограничников:</h4>
-        <ol>
-            <li>Приглашение от медицинской клиники на фирменном бланке с печатью, 
+        <h3>Правила въезда в Украину</h3>
+        <ul>
+            <li>Безвизовый въезд для беларусов до 180 дней в течение 365 дней
+                <a href="https://dmsu.gov.ua/services/migcalculator.html" class="link" target="blank"><i
+                        class="fas fa-link"></i>Міграційний калькулятор</a>
+            </li>
+            <li>Невакцинированные граждане должны установить приложение <span>Вдома</span></li>
+            <li>Страховка от COVID-19:<br>
+                Необходимо иметь страховой полис, выданный украинской страховой компанией или
+                иностранной страховой компанией, которая имеет представительство в Украине
+                <a href="https://visitukraine.today/ru" class="link" target="blank"><i
+                        class="fas fa-link"></i>visitukraine.today</a>
+            </li>
+            <li>Условия въезда:
+                <ol>
+                    <li>документ, подтверждающий получение одной или нескольких доз вакцины от COVID-19, которые
+                        одобрены ВОЗ
+                        для использования в чрезвычайных ситуациях; или</li>
+                    <li>иностранный COVID-сертификат, подтверждающий вакцинацию от COVID-19 вакцинами, которые одобрены
+                        ВОЗ
+                        для использования в чрезвычайных ситуациях, отрицательный результат теста методом ПЦР или
+                        выздоровление
+                        лица от COVID-19; или</li>
+                    <li>отрицательный результат ПЦР-теста или экспресс-теста на антиген, который сделан не более чем за
+                        72 часа до въезда</li>
+                </ol>
+            </li>
+
+            <h3>Выезд из Беларуси через наземные пункты пропуска</h3>
+            <p class="text"><span>Для граждан Беларуси выезд из страны временно приостановлен.</span></p>
+            <h3>Основания для выезда</h3>
+            <div class="links">
+                <a href="https://gpk.gov.by/covid-19/" class="link" target="blank"><i class="fas fa-link"></i>
+                    gpk.gov.by/covid-19</a>
+            </div>
+            <h4>Выезд из страны возможен для граждан Беларуси один <span>раз в три месяца</span> по каждому из следующих
+                оснований:</h4>
+            <ul>
+                <li>учеба в иностранном государстве,</li>
+                <li>наличие действительного документа, подтверждающего право на постоянное или временное проживание в
+                    иностранном государстве,</li>
+                <li>трудовая деятельность в иностранном государстве.</li>
+                <li>основание "Лечение"</li>
+            </ul>
+            <h4> Все лица во избежание проблем при пересечении границы обязаны <span>предъявлять документы</span>,
+                подтверждающие цель
+                поездки, <span>переведенные на один из государственных языков Республики Беларусь (белорусский,
+                    русский)</span>. Верность
+                перевода или подлинность подписи переводчика на переводе должна быть <span>засвидетельствована
+                    нотариусом</span> либо
+                другим лицом, имеющим право совершать такое нотариальное действие
+            </h4>
+            <h3>Основание "Лечение":</h3>
+            <h4>Для белорусских пограничников:</h4>
+            <ol>
+                <li>Приглашение от медицинской клиники на фирменном бланке с печатью,
                     прислано по почте, распечатано на цветном принтере</li>
-            <li>Приказ Мин Здравоохранения Украины о выдаче лицензии клинике (на всякий случай)</li>
-        </ol>
-        <h4>Для украинских пограничников:</h4>
-        <ol>
-            <li>ПЦР тест</li>
-            <li>Страховка от ураинской страховой Обериг, купленная онлайн и распечатанная</li>
-            <li>Установленное приложение Вдома, которое будет активировано после проверки пограничником введенных в приложение паспортных данных 
-                (куплен виртуальный украинский номер для получения смс, которые перенаправляются на электронную почту, 
-                куплен пакет роуминга для доступа в интернет на украинском пропускном пункте)</li>
-        </ol>
+                <li>Приказ Мин Здравоохранения Украины о выдаче лицензии клинике (на всякий случай)</li>
+            </ol>
+            <h4>Для украинских пограничников:</h4>
+            <ol>
+                <li>ПЦР тест</li>
+                <li>Страховка от ураинской страховой Обериг, купленная онлайн и распечатанная</li>
+                <li>Установленное приложение Вдома, которое будет активировано после проверки пограничником введенных в
+                    приложение паспортных данных
+                    (куплен виртуальный украинский номер для получения смс, которые перенаправляются на электронную
+                    почту,
+                    куплен пакет роуминга для доступа в интернет на украинском пропускном пункте)</li>
+            </ol>
+
+            <h3>Где сдать тест на COVID-19 в Беларуси</h3>
+            <ul>
+                <li><a href="https://covidtest.by/" class="link" target="blank"><i
+                            class="fas fa-link"></i>covidtest.by</a><br>
+                    Можно онлайн записаться в одну из лаб, и если экспресс (утром сдать, вечером получить
+                    результат)
+                    там доплаты и около 100р выходит. если на след день, то гдето 60р с доставкой.
+                    Я, например, выбирала лабу которая на долгиновский тракт 160 <span>@Валошка</span>.
+                </li>
+                <li><a href="https://rcheph.by/uslugi/grazhdanam/testirovanie-na-covid-19/" class="link"
+                        target="blank"><i class="fas fa-link"></i>rcheph.by/uslugi...</a><br>
+                    здесь онлайн запись, в субботу результат вечером можно забрать, т.е. сегодня на сегодня
+                    получается.
+                    И цена 45 руб <span>@Malpachka</span>.
+                </li>
+                <li>
+                    Самый дешевый вариант - это центры эпидемиологии в Минске или областных городах. Стоит 40
+                    рублей.
+                    Запись можно осуществить через талон бай. В Минске результат на след день выдают (мне
+                    сказали так) в
+                    Бресте результат выдают в тот же день , если сдавали тест в первой половине дня 8:30-12:30
+                    работают
+                    и в сб ,и вс.
+                    Выдают в формате необходимом для выезда зарубеж <span>@Ivan</span>.
+                </li>
+            </ul>
+
+            <h3>Где сдать тест на COVID-19 в Украине:</h3>
+            <p class="text">Досрочно прекратить самоизоляцию можно, получив отрицательный результат ПЦР-теста или
+                экспресс-теста на антиген</p>
+            <ul>
+                <li>Синево экспресс-тест на антиген за 300грн. по акции до 31.12.2021
+                    <a href="https://covid19.synevo.ua/?utm_source=site&utm_medium=alert&utm_campaign=covid19"
+                        class="link" target="blank"><i class="fas fa-link"></i>covid19.synevo.ua</a>
+                </li>
+                <li>Другие лаборатории, которые также отправляют результаты во Вдома
+                    <a href="https://docs.google.com/document/d/1c3jM_t3Z_tt-WHn3hYN6nRGcH67ct7HZi0eQtHGxsCY/edit"
+                        class="link" target="blank"><i class="fas fa-link"></i>docs.google.com/document</a>
+                </li>
+            </ul>
     </section>
 </body>
 
