--- a/mova.html
+++ b/mova.html
@@ -19,8 +19,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-
-  <title>Главная</title>
+  <title>Моуныя курсы и акции</title>
 </head>
 
 <body>
@@ -55,64 +54,8 @@
       </div>
     </div>
   </header>
-  <section class="container">
-    <div class="title__section">
-      <h2>Добро пожаловать</h2>
-      <h1>во Львов</h1>
-    </div>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-touch='true'>
-          <a href="mova.html" class="carousel__card" target="blank">
-            <div class="description lessons">
-              <h3>Курсы беларускай<br>
-                і ўкраінскай мовы<br>
-                <span>ў Львове</span></h3>
-              <p class="text">Кожную няделю<br>
-                <span>Беларуская<br>
-                  а 15:00<br>
-                  <br>
-                  Українська<br> в 16:00</span>
-              </p>
-            </div>
-          </a>
-        </div>
-        <div class="carousel-item" data-bs-touch='true'>
-          <a href="mova.html" class="carousel__card" target="blank">
-            <div class="description meet">
-              <h3>НЯДЗЕЛЬНАЯ АКЦЫЯ<br>
-                САЛІДАРНАСЦІ<br>
-                БЕЛАРУСАЎ ЛЬВОВА</h3>
-              <p class="text">Кожную няделю, 13:00<br>
-                Помнік Тарасу Шаўчэнку
-              </p>
-            </div>
-          </a>
-        </div>
-        <div class="carousel-item" data-bs-touch='true'>
-          <a href="http://belaruscentr.tilda.ws/" class="carousel__card" target="blank">
-            <div class="description crysis">
-              <img src="img/Logo-bkc.png" alt="logo-bkc" class="crysis__logo">
-              <h3>Беларускі крызісны цэнтр</h3>
-              <p class="text">у Львове дапамагае беларусам,<br>
-                якія змушаны былі з'ехаць з Радзімы
-              </p>
-            </div>
-          </a>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-    <!-- <p class="text">На время карантинных ограничений беларуская и украинская мовы проходят онлайн:</p>
+  <section class="container entry__section">
+    <h3>На время карантинных ограничений беларуская и украинская мовы проходят онлайн:</h3>
     <div class="links">
       <a href="https://t.me/belmova_lvou" class="link" target="blank">
         <i class="fab fa-telegram"></i>Беларуская мова ў Львове</a>
@@ -121,23 +64,13 @@
       <a href="https://t.me/ukrmova_belarus" class="link" target="blank">
         <i class="fab fa-telegram"></i>Українська мова для білорусів</a>
     </div>
-    <p class="text">Также акции в воскресенье не разрешены.</p> -->
+    <h3>Также акции по воскресеньям не разрешены.</h3>
 
   </section>
-
-  <footer class="container footer__section">
-    <p class="about">Контент для сайта взят на основании
-      <a href="https://docs.google.com/document/d/1SubsQeAm-wpspnxqQE3MNbXRYWxPuCvB0utG08wojWQ/edit?usp=sharing"
-        class="link" target="blank"><i class="fas fa-link"></i> Гугл Дока</a>
-      и вопросов-ответов в чате
-      <a href="https://t.me/bellviv" class="link" target="blank"><i class="fab fa-telegram"></i> Беларусы ў Львове</a>
-    </p>
-    <p class="text">Чат-бот для контакта: <a href="https://t.me/lvivsupolka_by_bot" class="link" target="blank"><i
-          class="fab fa-telegram"></i>
-        telegram</a></p>
-
-
-  </footer>
+  <!-- <script>
+    var myCarousel = document.querySelector('#myCarousel')
+var carousel = new bootstrap.Carousel(myCarousel)
+  </script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
