--- a/rent.html
+++ b/rent.html
@@ -2,16 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Rent</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Как снять квартиру, найти жилье, арендовать">
+  <meta name="keywords" content="Квартиры, аренда, поиск жилья, без агента">
+  <!-- Запрет индексации страницы полностью -->
+  <meta name="robots" content="none">
+  <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Аренда квартир во Львове</title>
 </head>
 
 <body>
@@ -28,8 +34,7 @@
         <li><a href="vaccinations.html">Вакцинация</a></li>
       </ul>
       <a class="navigation__home" href="index.html">
-        <img src="img/logo2.jpg" alt="logo"
-              class="navigation__img">
+        <img src="img/logo2.jpg" alt="logo" class="navigation__img">
       </a>
       <div class="navigation__mobile">
         <input id="navigation-mobile__toggle" type="checkbox" />
@@ -55,126 +60,130 @@
       <div class="links">
         <a href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/" class="link" target="blank">
           <i class="fas fa-link"></i>olx.ua</a>
-        <p class="text">OLX – одна из лидирующих онлайн-площадок объявлений мира, представленная более чем в 40 странах.</p>
+        <p class="text">OLX – одна из лидирующих онлайн-площадок объявлений мира, представленная более чем в 40 странах.
+        </p>
       </div>
       <div class="links">
         <a href="https://www.real-estate.lviv.ua" class="link" target="blank">
           <i class="fas fa-link"></i>real-estate.lviv.ua</a>
-          <p class="text">Нерухомість Львова</p>
+        <p class="text">Нерухомість Львова</p>
       </div>
       <div class="links">
         <a href="https://t.me/neruhomist_lviv_ua" class="link" target="blank">
           <i class="fab fa-telegram"></i>neruhomist_lviv_ua</a>
-          <p class="text">Нерухомість Львів, ПОШУК / ПРОДАЖ / ОРЕНДА / 20 444 members</p>
+        <p class="text">Нерухомість Львів, ПОШУК / ПРОДАЖ / ОРЕНДА / 20 444 members</p>
       </div>
       <div class="links">
         <a href="https://t.me/orendakvartyrlviv" class="link" target="blank">
           <i class="fab fa-telegram"></i>orendakvartyrlviv</a>
-          <p class="text">Оренда. Квартири. Кімнати. Львів. 3 965 members</p>
+        <p class="text">Оренда. Квартири. Кімнати. Львів. 3 965 members</p>
       </div>
       <div class="links">
         <a href="https://www.facebook.com/groups/rent032/" class="link" target="blank">
           <i class="fab fa-facebook"></i>rent032</a>
-          <p class="text">Оренда У Львові БЕЗ маклерів !Rent Lviv !No Makler! Закрытая группа. Участники: 81,8 тыс.</p>
+        <p class="text">Оренда У Львові БЕЗ маклерів !Rent Lviv !No Makler! Закрытая группа. Участники: 81,8 тыс.</p>
       </div>
       <div class="links">
         <a href="https://www.facebook.com/groups/nomakler.lviv/" class="link" target="blank">
           <i class="fab fa-facebook"></i>nomakler.lviv</a>
-          <p class="text">No makler - Львів. Общедоступная группа. 
-            Участники: 41,0 тыс.</p>
+        <p class="text">No makler - Львів. Общедоступная группа.
+          Участники: 41,0 тыс.</p>
       </div>
       <div class="links">
         <a href="https://www.facebook.com/groups/448598442160044" class="link" target="blank">
           <i class="fab fa-facebook"></i>groups/44859...</a>
-          <p class="text">Оренда квартир Львів , Нерухомість у Львові , Продаж квартир у Львові. Закрытая группа. Участники: 15,2 тыс.</p>
+        <p class="text">Оренда квартир Львів , Нерухомість у Львові , Продаж квартир у Львові. Закрытая группа.
+          Участники: 15,2 тыс.</p>
       </div>
       <div class="links">
         <a href="https://www.facebook.com/groups/realtyua" class="link" target="blank">
           <i class="fab fa-facebook"></i>realtyua</a>
-          <p class="text">Нерухомість у Львові, Квартири Львова, Оренда та продаж Львів. Закрытая группа. Участники: 29,9 тыс.</p>
+        <p class="text">Нерухомість у Львові, Квартири Львова, Оренда та продаж Львів. Закрытая группа. Участники: 29,9
+          тыс.</p>
       </div>
       <div class="links">
         <a href="https://www.facebook.com/groups/rentlvivnomakler" class="link" target="blank">
           <i class="fab fa-facebook"></i>rentlvivnomakler</a>
-          <p class="text">Оренда без маклера Квартири кімнати Львів Оренда у Львові БЕЗ ПОСЕРЕДНИКІВ. Закрытая группа. Участники: 57,0 тыс.</p>
+        <p class="text">Оренда без маклера Квартири кімнати Львів Оренда у Львові БЕЗ ПОСЕРЕДНИКІВ. Закрытая группа.
+          Участники: 57,0 тыс.</p>
       </div>
       <div class="links">
         <a href="https://www.facebook.com/groups/HLorenda" class="link" target="blank">
           <i class="fab fa-facebook"></i>HLorenda</a>
-          <p class="text">оренда хат без маклєрят. Закрытая группа. Участники: 20,3 тыс.</p>
+        <p class="text">оренда хат без маклєрят. Закрытая группа. Участники: 20,3 тыс.</p>
       </div>
       <div class="links">
         <a href="https://www.facebook.com/groups/orendra" class="link" target="blank">
           <i class="fab fa-facebook"></i>orendra</a>
-          <p class="text">ОРЕНДА КВАРТИР ЛЬВІВ БЕЗ ПОСЕРЕДНИКІВ. Общедоступная группа. Участники: 48,5 тыс.</p>
+        <p class="text">ОРЕНДА КВАРТИР ЛЬВІВ БЕЗ ПОСЕРЕДНИКІВ. Общедоступная группа. Участники: 48,5 тыс.</p>
       </div>
     </div>
-      
 
-      
+
+
 
     <!-- <div class="box"> -->
-      <!-- <a class="box__link" target="blank" href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/">
+    <!-- <a class="box__link" target="blank" href="https://www.olx.ua/nedvizhimost/kvartiry-komnaty/lvov/">
         <div class="item">
           <img class="logo" src="./img/olx-logo-60h.png" alt="">
           <p class="title">olx.ua</p>
         </div>
       </a> -->
-      <!-- <a class="box__link" target="blank" href="https://www.real-estate.lviv.ua">
+    <!-- <a class="box__link" target="blank" href="https://www.real-estate.lviv.ua">
         <div class="item">
           <i class="fas fa-home"></i>
           <p class="title">real-estate.lviv.ua</p>
         </div>
       </a> -->
-      <!-- <a class="box__link" target="blank" href="https://t.me/neruhomist_lviv_ua">
+    <!-- <a class="box__link" target="blank" href="https://t.me/neruhomist_lviv_ua">
         <div class="item">
           <i class="fab fa-telegram"></i>
           <p class="title">Нерухомість Львів</p>
         </div>
       </a> -->
-      <!-- <a class="box__link" target="blank" href="https://t.me/orendakvartyrlviv">
+    <!-- <a class="box__link" target="blank" href="https://t.me/orendakvartyrlviv">
         <div class="item">
           <i class="fab fa-telegram"></i>
           <p class="title">Оренда. Квартири. Кімнати. Львів.</p>
         </div>
       </a> -->
-      <!-- <a class="box__link" target="blank" href=" https://www.facebook.com/groups/rent032/">
+    <!-- <a class="box__link" target="blank" href=" https://www.facebook.com/groups/rent032/">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">Оренда У Львові БЕЗ маклерів!</p>
         </div>
       </a> -->
-      <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/nomakler.lviv/">
+    <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/nomakler.lviv/">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">No makler - Львів</p>
         </div>
       </a> -->
-      <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/448598442160044">
+    <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/448598442160044">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">Оренда квартир Львів</p>
         </div>
       </a> -->
-      <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/realtyua">
+    <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/realtyua">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">Нерухомість у Львові</p>
         </div>
       </a> -->
-      <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/rentlvivnomakler">
+    <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/rentlvivnomakler">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">Оренда без маклера</p>
         </div>
       </a> -->
-      <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/HLorenda">
+    <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/HLorenda">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">оренда хат без маклєрят</p>
         </div>
       </a> -->
-      <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/orendra">
+    <!-- <a class="box__link" target="blank" href="https://www.facebook.com/groups/orendra">
         <div class="item">
           <i class="fab fa-facebook-square"></i>
           <p class="title">ОРЕНДА КВАРТИР ЛЬВІВ</p>
