meta+title+style+footer

--- a/visas.html
+++ b/visas.html
@@ -61,7 +61,7 @@
             консульство <span>в Львове</span>.
             Для тех кто в Киеве или других городах самостоятельно найдите адрес посольства.</p>
 
-        <h2>Виза Polish Business Harbour</h2>
+        <h2>Виза Poland.Business Harbour</h2>
         <h3>Чат Польши:</h3>
         <p class="text">Для тех, кто переезжает в Польшу по программе Poland.Business Harbour <span>из Беларуси</span>
             <a href="https://t.me/PBH_BY2PLN" class="link" target="Blank"><i class="fab fa-telegram"></i>
