--- a/lviv.html
+++ b/lviv.html
@@ -12,8 +12,8 @@
     <meta name="robots" content="none">
     <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
         rel="stylesheet">
@@ -42,12 +42,12 @@
                     <span></span>
                 </label>
                 <ul class="navigation-mobile__box">
-                    <li><a class="navigation-mobile__item" href="entry.html">Въезд</a></li>
-                    <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
-                    <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
+                    <li><a class="navigation-mobile__item" href="entry.html">Правила въезда</a></li>
+                    <li><a class="navigation-mobile__item" href="rent.html">Аренда квартир</a></li>
+                    <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ и документы</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
-                    <li><a class="navigation-mobile__item" href="visas.html">Визы</a></li>
-                    <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
+                    <li><a class="navigation-mobile__item" href="visas.html">Польские визы</a></li>
+                    <li><a class="navigation-mobile__item" href="money.html">Банки и банкоматы</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
                     <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
                 </ul>
