--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-touch='true'>
-          <a href="mova.html" class="carousel__card" target="blank">
+          <a href="mova.html" class="carousel__card">
             <div class="description lessons">
               <h3>Курсы беларускай<br>
                 і ўкраінскай мовы<br>
@@ -78,7 +78,7 @@
           </a>
         </div>
         <div class="carousel-item" data-bs-touch='true'>
-          <a href="mova.html" class="carousel__card" target="blank">
+          <a href="mova.html" class="carousel__card">
             <div class="description meet">
               <h3>НЯДЗЕЛЬНАЯ АКЦЫЯ<br>
                 САЛІДАРНАСЦІ<br>
