--- a/mova.html
+++ b/mova.html
@@ -10,9 +10,8 @@
   <!-- Запрет индексации страницы полностью -->
   <meta name="robots" content="none">
   <script src="https://kit.fontawesome.com/98db508811.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&display=swap"
     rel="stylesheet">
