--- a/lviv.html
+++ b/lviv.html
@@ -64,9 +64,9 @@
             </div>
             <h4>Автобусы, маршрутки, трамваи, троллейбусы.</h4>
             <p class="text">В <span>маршрутках</span> и <span>автобусах</span> оплата наличными водителю на входе в
-                транспорт (7 грн).</p>
+                транспорт (8,50 - 10 грн).</p>
             <p class="text">В <span>трамваях</span> и <span>троллейбусах</span> нужно покупать и компостировать талоны
-                (7 грн).
+                (8,50 грн - онлайн, 9 грн - в киоске, 10 грн - у водителя).
                 Талоны можно купить у водителя или в киосках (киосков, продающих талоны, очень мало).</p>
             <p class="text">Также в <span>трамваях</span> можно оплатить проезд через приложение Приват24, в некоторых
                 трамваях можно оплатить проезд
